# Shadow_Fence

shadowfence-v2.0.0/: LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
shadowfence-v2.0.0/docs/: ATTACK_LAB_REPORT.md
shadowfence-v2.0.0/rules/: default_rules.yaml  example_blocklist.json
shadowfence-v2.0.0/shadowfence/: __init__.py  __main__.py  cli.py  config.py
shadowfence-v2.0.0/shadowfence/alerts/: alert_manager.py  email_alert.py
shadowfence-v2.0.0/shadowfence/capture/: packet_parser.py  pcap_export.py  sniffer.py
shadowfence-v2.0.0/shadowfence/dashboard/: app.py
shadowfence-v2.0.0/shadowfence/dashboard/static/css/: style.css
shadowfence-v2.0.0/shadowfence/dashboard/static/js/: dashboard.js
shadowfence-v2.0.0/shadowfence/dashboard/templates/: index.html
shadowfence-v2.0.0/shadowfence/detection/: engine.py
shadowfence-v2.0.0/shadowfence/detection/detectors/: arp_spoof.py  bandwidth_anomaly.py  brute_force.py  ddos.py  dns_tunnel.py  firewall.py  network_mapper.py  payload.py  port_scan.py  protocol_anomaly.py  ssl_anomaly.py  threat_intel.py
shadowfence-v2.0.0/shadowfence/logging/: logger.py
shadowfence-v2.0.0/shadowfence/utils/: helpers.py
shadowfence-v2.0.0/tests/: attack_simulation.py  test_advanced_detection.py  test_alerts.py  test_detection.py
